--- a/portfolio site/text.html
+++ b/portfolio site/text.html
@@ -1,141 +1,86 @@
 <!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
 <html><!-- ここからHTMLが始まりますというタグ -->
-<div class="page_tag">
- <h1>Satsuki Wada</h1><!-- 見出し -->
- <p1>works</p1><br>
- <p2>concept</p2><br>
- <p3>profile</p3>
-</div>
-<div class="works_imgs">
-	 <div class="box1">
-    <img src="neoconnection.jpg" id="img1" alt="neo connection"><br>
-    <p4>NEO CONNECTION</p4><br>
-    <p5>金沢美術工芸大学卒業制作</p5>
-   </div>
-	 <div class="box2">
-    <img src="social issue-2.jpg" id="img2" alt="social issue"><br>
-		<p6>OWNS</p6><br>
-		<p7>社会問題にプロダクトデザインができること</p7>
-	 </div>
-	 <div class="box3">
-	  <img src="entertainment.jpg" id="img3"alt="next entertainment"><br>
-		<p8>ooze</p8><br>
-		<p9>これからのエンターテイメント</p9>
-	 </div>
- <br>
-   <div class="box4">
-	  <img src="entertainment.jpg" id="img4" alt="service for home care"><br>
-		<p10>だんだん</p10><br>
-		<p11>在宅介護サービス/プロダクト</p11>
-	 </div>
-	 <div class="box5">
-    <img src="entertainment.jpg" id="img5" alt="chair design"><br>
-		<p12>Chair design</p12><br>
-		<p13>学校の時間を豊かにするデザイン</p13>
-	 </div>
-	 <div class="box6">
-　　 <img src="entertainment.jpg" id="img6" alt="nature × IoT"><br>
-    <p14>petoile</p14><br>
-    <p15>自然×IoT</p15>
-   </div>
-</div>
-
-<head><!-- ここから裏の設定ですよという宣言 -->
-	<meta charset="utf-8"><!-- 文字化け防止の記述 -->
-	<meta http-equiv="X-UA-Compatible" content="IE=edge"><!-- ややこしいので無視してOK -->
-	<title>Satsuki Wada Works</title><!-- ページのタイトルを入れます -->
-	<style>
-   h1 {
-	  font-family: "Arial";
-	  font-size: 130%;
-    font-weight: bold;
-		padding-top: 50px;
-	  padding-bottom: 30px;
-    text-align: left;
-    position: relative;
-    letter-spacing: 2px;
-   }
-
-   p1,p2,p3 {
-	  font-family: "Arial";
-    width: 100%;
-		font-size: 90%;
-    line-height: 3;
-		padding-top: 0px;
-		text-align: left;
-    position: relative;
-    z-index: 999;
-    color: rgb(60%,60%,60%);
-    letter-spacing: 1px;
-   }
-
-   img {
-    width: 217px;
-		height: 122px;
-   }
-   img#img1,#img2,#img3{
-	  padding-top:145px;
-   }
-   img#img4,#img5,#img6{
-		 padding-top: 20px;
-	 }
-   p4,p6,p8,p10,p12,p14{
-	  font-family: "Arial";
-		font-size: 80%;
-    position: relative;
-   }
-   p5,p7,p9,p11,p13,p15{
-		font-size: 50%;
-		color: rgb(60%,60%,60%);
-   }
-   html {
-    background-color: #fff;
-   }
-   .page_tag{
-	   padding-left: 200px;
-	   width: 300px;
-	   height: 200px;
-	   float:left;
-   }
-   .works_imgs{
-	   width: 800px;
-	   height: 700px;
-	   float: left;
-   }
-   .box1{
-	   text-align: left;
- 		 width: 217px;
-		 float: left;
-   }
-	 .box2{
-	　	text-align: left;
-	   width: 217px;
-     float: left;
-	 }
-	 .box3{
-	　	text-align: left;
-	　	width: 217px;
-	  float:left;
-	 }
-	 .box4{
-	　	text-align: left;
-	　	width: 217px;
-	 	float: left;
-	 }
-	 .box5{
-	　	text-align: left;
-	　	width: 217px;
-		float:left;
-	 }
-	 .box6{
-	　	text-align: left;
-	　	width: 217px;
-	 }
-
-
-</style>
-</head><!-- ここまでがうらの設定ですよという宣言 -->
-<body><!-- ここからページに表示される内容ですよという宣言 -->
-
-</body><!-- ここまでがページに表示される内容ですよという宣言 -->
-</html><!-- ここまでがHTMLですという終わりの宣言 -->
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  </head>
+  <body>
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col-lg-3 offset-lg-1">
+          <h1><a href="text.html">Satsuki Wada</a></h1>
+          <ul class="list-unstyled">
+            <div onclick="obj=document.getElementById('open').style; obj.display=(obj.display=='none')?'block':'none';">
+            <a style="cursor:pointer;">works</a>
+            </div>
+            <div id="open" style="display:none;clear:both;" >
+              <a><li><a href="neoconnection.html">NEO CONNECTION</a></li>
+                <li><a href="owns.html">OWNS</a></li>
+                <li><a href="ooze.html">ooze</a></li>
+                <li><a href="dandan.html">だんだん</a></li>
+                <li><a href="talkn.html">Talkn</a></li>
+                <li><a href="petoile.html">petoile</a></li>
+              </a>
+            </div>
+            <li><a href="concept.html">concept</a></li>
+            <li><a href="profile.html">profile</a></li>
+          </ul>
+        </div>
+        <div class="col-lg-7">
+          <div class="row">
+            <li><a href="neoconnection.html">
+              <div class="col-lg-4">
+              <img src="assets/neoconnection-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">NEO CONNECTION</h5>
+                <p style="font-size: 12px">未来のためのコンセプト・デザイン</p>
+              </div>
+              </div></a></li>
+            <li><a href="owns.html">
+              <div class="col-lg-4">
+              <img src="assets/owns-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">OWNS</h5>
+                <p style="font-size: 12px">モノを所有し続けるためのソリューション</p>
+              </div>
+              </div></a></li>
+            <li><a href="ooze.html">
+              <div class="col-lg-4">
+              <img src="assets/ooze-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">ooze</h5>
+                <p style="font-size: 12px">気配で繋がるエンターテイメント</p>
+              </div></a></li>
+              </div>
+            <li><a href="dandan.html">
+              <div class="col-lg-4">
+              <img src="assets/dandan-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">だんだん</h5>
+                <p style="font-size: 12px">在宅介護のためのIoTミラー</p>
+              </div>
+              </div></a></li>
+            <li><a href="talkn.html">
+              <div class="col-lg-4">
+              <img src="assets/chair-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">Talkn</h5>
+                <p style="font-size: 12px">"しるし"の付いた小学校用椅子</p>
+              </div>
+              </div></a></li>
+            <li><a href="petoile.html">
+              <div class="col-lg-4">
+              <img src="assets/petoile-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">petoile</h5>
+                <p style="font-size: 12px">星を捕まえ、飼育できるプロダクト</p>
+              </div>
+              </div></a></li>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
