Workの並びが壊れているのを修正

--- a/portfolio site/text.html
+++ b/portfolio site/text.html
@@ -30,54 +30,60 @@
         </div>
         <div class="col-lg-7">
           <div class="row">
-            <li><a href="neoconnection.html">
-              <div class="col-lg-4">
-              <img src="assets/neoconnection-top.jpg" class="img-fluid" alt="">
-              <div class="mt-1">
-                <h5 class="mb-0">NEO CONNECTION</h5>
-                <p style="font-size: 12px">未来のためのコンセプト・デザイン</p>
-              </div>
-              </div></a></li>
-            <li><a href="owns.html">
-              <div class="col-lg-4">
-              <img src="assets/owns-top.jpg" class="img-fluid" alt="">
-              <div class="mt-1">
-                <h5 class="mb-0">OWNS</h5>
-                <p style="font-size: 12px">モノを所有し続けるためのソリューション</p>
-              </div>
-              </div></a></li>
-            <li><a href="ooze.html">
-              <div class="col-lg-4">
-              <img src="assets/ooze-top.jpg" class="img-fluid" alt="">
-              <div class="mt-1">
-                <h5 class="mb-0">ooze</h5>
-                <p style="font-size: 12px">気配で繋がるエンターテイメント</p>
-              </div></a></li>
-              </div>
-            <li><a href="dandan.html">
-              <div class="col-lg-4">
-              <img src="assets/dandan-top.jpg" class="img-fluid" alt="">
-              <div class="mt-1">
-                <h5 class="mb-0">だんだん</h5>
-                <p style="font-size: 12px">在宅介護のためのIoTミラー</p>
-              </div>
-              </div></a></li>
-            <li><a href="talkn.html">
-              <div class="col-lg-4">
-              <img src="assets/chair-top.jpg" class="img-fluid" alt="">
-              <div class="mt-1">
-                <h5 class="mb-0">Talkn</h5>
-                <p style="font-size: 12px">"しるし"の付いた小学校用椅子</p>
-              </div>
-              </div></a></li>
-            <li><a href="petoile.html">
-              <div class="col-lg-4">
-              <img src="assets/petoile-top.jpg" class="img-fluid" alt="">
-              <div class="mt-1">
-                <h5 class="mb-0">petoile</h5>
-                <p style="font-size: 12px">星を捕まえ、飼育できるプロダクト</p>
-              </div>
-              </div></a></li>
+            <div class="col-lg-4">
+              <a href="neoconnection.html">
+                <img src="assets/neoconnection-top.jpg" class="img-fluid" alt="">
+                <div class="mt-1">
+                  <h5 class="mb-0">NEO CONNECTION</h5>
+                  <p style="font-size: 12px">未来のためのコンセプト・デザイン</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <a href="owns.html">
+                <img src="assets/owns-top.jpg" class="img-fluid" alt="">
+                <div class="mt-1">
+                  <h5 class="mb-0">OWNS</h5>
+                  <p style="font-size: 12px">モノを所有し続けるためのソリューション</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <a href="ooze.html">
+                <img src="assets/ooze-top.jpg" class="img-fluid" alt="">
+                <div class="mt-1">
+                  <h5 class="mb-0">ooze</h5>
+                  <p style="font-size: 12px">気配で繋がるエンターテイメント</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <a href="dandan.html">
+                <img src="assets/dandan-top.jpg" class="img-fluid" alt="">
+                <div class="mt-1">
+                  <h5 class="mb-0">だんだん</h5>
+                  <p style="font-size: 12px">在宅介護のためのIoTミラー</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <a href="talkn.html">
+                <img src="assets/chair-top.jpg" class="img-fluid" alt="">
+                <div class="mt-1">
+                  <h5 class="mb-0">Talkn</h5>
+                  <p style="font-size: 12px">"しるし"の付いた小学校用椅子</p>
+                </div>
+              </a>
+            </div>
+            <div class="col-lg-4">
+              <a href="petoile.html">
+                <img src="assets/petoile-top.jpg" class="img-fluid" alt="">
+                <div class="mt-1">
+                  <h5 class="mb-0">petoile</h5>
+                  <p style="font-size: 12px">星を捕まえ、飼育できるプロダクト</p>
+                </div>
+              </a>
+            </div>
           </div>
         </div>
       </div>
