--- a/portfolio site/dandan.html
+++ b/portfolio site/dandan.html
@@ -31,7 +31,7 @@
         <div class="col-lg-7 ">
         <p>三菱電機との産学連携プロジェクト<br>テーマ「住宅における匂い・菌に関する製品・システムの提案」</p>
         <div class="col-lg-12">
-          <img src="assets/dandan-page.png" class="img-fluid" alt="">
+          <img src="assets/dandan-page.jpg" class="img-fluid" alt="">
           <img src="assets/dandan-page2.png" class="img-fluid" alt="">
           <img src="assets/dandan-page3.png" class="img-fluid" alt="">
           <img src="assets/dandan-page4.png" class="img-fluid" alt="">
