home画面の修正-他ページはまだ

--- a/portfolio site/text.html
+++ b/portfolio site/text.html
@@ -9,17 +9,20 @@
   <body>
     <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-3 offset-lg-1">
-          <h1><a href="text.html">Satsuki Wada</a></h1>
-          <ul class="list-unstyled">
-            <li><a href="concept.html">concept</a></li>
-            <li><a href="profile.html">profile</a></li>
+        <div class="col-lg-10 offset-lg-1">
+          <ul class="text-end">
+            <a href="#works" class="text-secondary text-decoration-none">works</a>
+            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
           </ul>
+          <h1><a href="text.html" class="text-dark text-decoration-none">Satsuki Wada</a></h1>
         </div>
-        <div class="col-lg-7">
-          <div class="row">
+        <div class="col-lg-10 offset-lg-1">
+          <div class="row pb-5 pt-2"><a>デザイン・アート・ビジネスといった、括りに拘らず、ただ何かを作り続けたいと思っています。</a></div>
+          <div class="row pt-5 pb-5">
+            <div class="row"><a name="works">works</a></div>
+            <div class="row pt-2 pb-1"><a>2017-2020</a></div>
             <div class="col-lg-4">
-              <a href="neoconnection.html">
+              <a href="neoconnection.html" class="text-dark text-decoration-none">
                 <img src="assets/neoconnection-top.jpg" class="img-fluid" alt="">
                 <div class="mt-1">
                   <h5 class="mb-0">NEO CONNECTION</h5>
@@ -28,7 +31,7 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="owns.html">
+              <a href="owns.html" class="text-dark text-decoration-none">
                 <img src="assets/owns-top.jpg" class="img-fluid" alt="">
                 <div class="mt-1">
                   <h5 class="mb-0">OWNS</h5>
@@ -37,7 +40,7 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="ooze.html">
+              <a href="ooze.html" class="text-dark text-decoration-none">
                 <img src="assets/ooze-top.jpg" class="img-fluid" alt="">
                 <div class="mt-1">
                   <h5 class="mb-0">ooze</h5>
@@ -46,7 +49,7 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="dandan.html">
+              <a href="dandan.html" class="text-dark text-decoration-none">
                 <img src="assets/dandan-top.jpg" class="img-fluid" alt="">
                 <div class="mt-1">
                   <h5 class="mb-0">だんだん</h5>
@@ -55,7 +58,7 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="talkn.html">
+              <a href="talkn.html" class="text-dark text-decoration-none">
                 <img src="assets/chair-top.jpg" class="img-fluid" alt="">
                 <div class="mt-1">
                   <h5 class="mb-0">Talkn</h5>
@@ -64,7 +67,7 @@
               </a>
             </div>
             <div class="col-lg-4">
-              <a href="petoile.html">
+              <a href="petoile.html" class="text-dark text-decoration-none">
                 <img src="assets/petoile-top.jpg" class="img-fluid" alt="">
                 <div class="mt-1">
                   <h5 class="mb-0">petoile</h5>
@@ -72,6 +75,11 @@
                 </div>
               </a>
             </div>
+          </div>
+          <div class="row pt-5 pb-5">
+            <div class="row pb-2"><a name="contact">contact</a></div>
+            <a>和田 さつき / Satsuki Wada</a>
+            <a>email: www.satsuki.wada@gmail.com</a>
           </div>
         </div>
       </div>
