解像度下げ,他ページ編集,ナビバー

--- a/portfolio site/talkn.html
+++ b/portfolio site/talkn.html
@@ -9,22 +9,34 @@
   <body>
     <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-3 offset-lg-1">
-          <h1><a href="text.html">Satsuki Wada</a></h1>
-          <ul class="list-unstyled">
-            <li><a href="profile.html">profile</a></li>
+          <nav class="navbar navbar-dark bg-white fixed-top">
+            <body style="padding-top: 5rem">
+          <ul class="text-end">
+            <ul class="list-unstyled">
+              <li><a href="text.html" class="text-secondary text-decoration-none">home</a></li>
+            </ul>
+            <a href="text.html#works" class="text-secondary text-decoration-none">works</a>
+            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
           </ul>
-        </div>
-        <div class="col-lg-7 ">
+        </body>
+          </nav>
+
+          <div class="col-lg-10 offset-lg-1">
+          <div class="col-lg-12">
         <p>テーマ「小学校の時間を豊かにする椅子のデザイン」
           <br>持ち手にしるしがついていることで教師が椅子の使い方を指示しやすく、生徒も理解しやすい、コミュニケーションの媒体となる椅子の提案</p>
         <div class="col-lg-12">
-          <img src="assets/talkn-page.png" class="img-fluid" alt="">
-          <img src="assets/talkn-page2.png" class="img-fluid" alt="">
-          <img src="assets/talkn-page3.png" class="img-fluid" alt="">
-          <img src="assets/talkn-page4.png" class="img-fluid" alt="">
-          <img src="assets/talkn-page5.png" class="img-fluid" alt="">
+          <img src="assets/talkn-page.jpg" class="img-fluid" alt="">
+          <img src="assets/talkn-page2.jpg" class="img-fluid" alt="">
+          <img src="assets/talkn-page3.jpg" class="img-fluid" alt="">
+          <img src="assets/talkn-page4.jpg" class="img-fluid" alt="">
+          <img src="assets/talkn-page5.jpg" class="img-fluid" alt="">
         </div>
+            </div>
+            <div class="row pt-5 pb-5">
+              <div class="row pb-2"><a name="contact">contact</a></div>
+              <a>和田 さつき / Satsuki Wada</a>
+              <a>email: www.satsuki.wada@gmail.com</a>
             </div>
           </div>
         </div>
