--- a/portfolio site/neoconnection.html
+++ b/portfolio site/neoconnection.html
@@ -9,21 +9,34 @@
   <body>
     <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-3 offset-lg-1">
-          <h1><a href="text.html">Satsuki Wada</a></h1>
-          <ul class="list-unstyled">
-            <li><a href="profile.html">profile</a></li>
+          <nav class="navbar navbar-dark bg-white fixed-top">
+            <body style="padding-top: 5rem">
+          <ul class="text-end">
+            <ul class="list-unstyled">
+              <li><a href="text.html" class="text-secondary text-decoration-none">home</a></li>
+            </ul>
+            <a href="text.html#works" class="text-secondary text-decoration-none">works</a>
+            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
           </ul>
-        </div>
-        <div class="col-lg-7 ">
+        </body>
+          </nav>
+
+        <div class="col-lg-10 offset-lg-1">
+        <div class="col-lg-12">
         <p>テーマ「これからの人の繋がり方」
           <br>金沢美術工芸大学卒業制作。「本当の意味で自由な繋がり方を選択できる未来とは？」という考えのもと、コンセプト/ムービーを作成。</p>
         <div class="col-lg-12">
-          <iframe width=720 height=400 src="https://www.youtube.com/embed/ywDCyvD0myQ" frameborder="0" allowfullscreen></iframe>
-          <img width=720 src="assets/neo-hp.png" class="img-fluid" alt="">
+          <iframe width="1080" height="600" src="https://www.youtube.com/embed/ywDCyvD0myQ" frameborder="0" allowfullscreen></iframe>
+          <img width="1080" src="assets/neo-hp.jpg" class="img-fluid" alt="">
         </div>
             </div>
+            <div class="row pt-5 pb-5">
+              <div class="row pb-2"><a name="contact">contact</a></div>
+              <a>和田 さつき / Satsuki Wada</a>
+              <a>email: www.satsuki.wada@gmail.com</a>
+            </div>
           </div>
+        </div>
         </div>
       </div>
     </div>
