--- a/portfolio site/owns.html
+++ b/portfolio site/owns.html
@@ -9,22 +9,35 @@
   <body>
     <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-3 offset-lg-1">
-          <h1><a href="text.html">Satsuki Wada</a></h1>
-          <ul class="list-unstyled">
-            <li><a href="profile.html">contact</a></li>
+          <nav class="navbar navbar-dark bg-white fixed-top">
+            <body style="padding-top: 5rem">
+          <ul class="text-end">
+            <ul class="list-unstyled">
+              <li><a href="text.html" class="text-secondary text-decoration-none">home</a></li>
+            </ul>
+            <a href="text.html#works" class="text-secondary text-decoration-none">works</a>
+            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
           </ul>
+        </body>
+          </nav>
+
+          <div class="col-lg-10 offset-lg-1">
+          <div class="col-lg-12">
+        <p>テーマ「社会問題に対してプロダクトデザインができること」
+        <br>人々が所有物を捨て、新しいものを買い続けるのは「修理の選択肢」を得られていないという社会システムに問題があると考え、誰でも所有物を修理に繋げられるプロダクトを提案した。</p>
+          <img src="assets/owns-page.jpg" class="img-fluid" alt="">
+          <img src="assets/owns-page2.jpg" class="img-fluid" alt="">
+          <video src="assets/owns-page3.mov" class="img-fluid" alt=""controls muted autoplay playinline loop>
+            <p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
+          </video>
+          <img src="assets/owns-page4.jpg" class="img-fluid" alt="">
+          <img src="assets/owns-page5.jpg" class="img-fluid" alt="">
         </div>
-        <div class="col-lg-7 ">
-        <p>テーマ「社会問題に対してプロダクトデザインができること」<br>人々が所有物を捨て、新しいものを買い続けるのは「修理の選択肢」を得られていないという社会システムに問題があると考え、誰でも所有物を修理に繋げられるプロダクトを提案した。</p>
-        <div class="col-lg-12">
-          <img src="assets/owns-page.png" class="img-fluid" alt="">
-          <img src="assets/owns-page2.png" class="img-fluid" alt="">
-          <video src="assets/owns-page3.mp4" class="img-fluid" alt=""controls muted autoplay playinline loop><p>動画を再生するにはvideoタグをサポートしたブラウザが必要です。</p>
-</video>
-          <img width=715 src="assets/owns-page4.png" class="img-fluid" alt="">
-          <img width=715 src="assets/owns-page5.png" class="img-fluid" alt="">
-        </div>
+            </div>
+            <div class="row pt-5 pb-5">
+              <div class="row pb-2"><a name="contact">contact</a></div>
+              <a>和田 さつき / Satsuki Wada</a>
+              <a>email: www.satsuki.wada@gmail.com</a>
             </div>
           </div>
         </div>
