--- a/portfolio site/petoile.html
+++ b/portfolio site/petoile.html
@@ -9,17 +9,29 @@
   <body>
     <div class="container mt-5">
       <div class="row">
-        <div class="col-lg-3 offset-lg-1">
-          <h1><a href="text.html">Satsuki Wada</a></h1>
-          <ul class="list-unstyled">
-            <li><a href="profile.html">contact</a></li>
+          <nav class="navbar navbar-dark bg-white fixed-top">
+            <body style="padding-top: 5rem">
+          <ul class="text-end">
+            <ul class="list-unstyled">
+              <li><a href="text.html" class="text-secondary text-decoration-none">home</a></li>
+            </ul>
+            <a href="text.html#works" class="text-secondary text-decoration-none">works</a>
+            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
           </ul>
-        </div>
-        <div class="col-lg-7 ">
+        </body>
+          </nav>
+
+          <div class="col-lg-10 offset-lg-1">
+          <div class="col-lg-12">
         <p>テーマ「自然×IoT」<br>仕事の帰り道で星を手に入れ、室内で飼う事ができるプロダクトの提案</p>
         <div class="col-lg-12">
-          <img src="assets/petoile-page.png" class="img-fluid" alt="">
+          <img src="assets/petoile-page.jpg" class="img-fluid" alt="">
         </div>
+            </div>
+            <div class="row pt-5 pb-5">
+              <div class="row pb-2"><a name="contact">contact</a></div>
+              <a>和田 さつき / Satsuki Wada</a>
+              <a>email: www.satsuki.wada@gmail.com</a>
             </div>
           </div>
         </div>
