--- a/portfolio site/profile.html
+++ b/portfolio site/profile.html
@@ -12,7 +12,7 @@
         <div class="col-lg-3 offset-lg-1">
           <h1><a href="text.html">Satsuki Wada</a></h1>
           <ul class="list-unstyled">
-            <li><a href="profile.html">profile</a></li>
+            <li><a href="profile.html">contact</a></li>
           </ul>
         </div>
         <div class="col-lg-7 ">
