--- a/portfolio site/text.html
+++ b/portfolio site/text.html
@@ -10,16 +10,24 @@
     <div class="container mt-5">
       <div class="row">
         <div class="col-lg-10 offset-lg-1">
+          <nav class="navbar navbar-dark bg-white fixed-top">
+            <body style="padding-top: 5rem">
           <ul class="text-end">
+            <a href="#top" class="text-secondary text-decoration-none">top</a>
             <a href="#works" class="text-secondary text-decoration-none">works</a>
             <a href="#contact" class="text-secondary text-decoration-none">contact</a>
           </ul>
-          <h1><a href="text.html" class="text-dark text-decoration-none">Satsuki Wada</a></h1>
+        </body>
+          </nav>
+
+        <div class="row"><h1 name="top">Satsuki Wada
+        </h1></div>
         </div>
         <div class="col-lg-10 offset-lg-1">
-          <div class="row pb-5 pt-2"><a>デザイン・アート・ビジネスといった、括りに拘らず、ただ何かを作り続けたいと思っています。</a></div>
+          <div class="row pb-5 pt-2"><a>デザイン・アート・ビジネスといった、括りに拘らない作品作りをしています。</a></div>
           <div class="row pt-5 pb-5">
-            <div class="row"><a name="works">works</a></div>
+
+        <div class="row"><a name="works">works</a></div>
             <div class="row pt-2 pb-1"><a>2017-2020</a></div>
             <div class="col-lg-4">
               <a href="neoconnection.html" class="text-dark text-decoration-none">
