--- a/portfolio site/dandan.html
+++ b/portfolio site/dandan.html
@@ -7,24 +7,18 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container mt-5">
-      <div class="row">
-          <nav class="navbar navbar-dark bg-white fixed-top">
-            <body style="padding-top: 5rem">
-          <ul class="text-end">
-            <ul class="list-unstyled">
-              <li><a href="text.html" class="text-secondary text-decoration-none">home</a></li>
-            </ul>
-            <a href="text.html#works" class="text-secondary text-decoration-none">works</a>
-            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
-          </ul>
-        </body>
-          </nav>
+    <div class="container mt-3 mb-5">
 
-          <div class="col-lg-10 offset-lg-1">
-          <div class="col-lg-12">
-        <p>三菱電機との産学連携プロジェクト
-          <br>テーマ「住宅における匂い・菌に関する製品・システムの提案」</p>
+      <div class="col-lg-10 offset-lg-1">
+
+        <div class="mb-4">
+         <a href="text.html" class="text-secondary text-decoration-none">home</a>
+        </div>
+
+        <h1>だんだん</h1>
+        <p>三菱電機との産学連携プロジェクト<br>
+          テーマ「住宅における匂い・菌に関する製品・システムの提案」</p>
+
         <div class="col-lg-12">
           <img src="assets/dandan-page.jpg" class="img-fluid" alt="">
           <img src="assets/dandan-page2.jpeg" class="img-fluid" alt="">
@@ -33,14 +27,7 @@
           <img src="assets/dandan-page5.jpeg" class="img-fluid" alt="">
           <img src="assets/dandan-page6.jpeg" class="img-fluid" alt="">
         </div>
-            </div>
-            <div class="row pt-5 pb-5">
-              <div class="row pb-2"><a name="contact">contact</a></div>
-              <a>和田 さつき / Satsuki Wada</a>
-              <a>email: www.satsuki.wada@gmail.com</a>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
   </body>
