--- a/portfolio site/ooze.html
+++ b/portfolio site/ooze.html
@@ -7,35 +7,23 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container mt-5">
-      <div class="row">
-          <nav class="navbar navbar-dark bg-white fixed-top">
-            <body style="padding-top: 5rem">
-          <ul class="text-end">
-            <ul class="list-unstyled">
-              <li><a href="text.html" class="text-secondary text-decoration-none">home</a></li>
-            </ul>
-            <a href="text.html#works" class="text-secondary text-decoration-none">works</a>
-            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
-          </ul>
-        </body>
-          </nav>
+    <div class="container mt-3 mb-5">
 
           <div class="col-lg-10 offset-lg-1">
-          <div class="col-lg-12">
-        <p>テーマ「これからのエンターテイメント」
-          <br>バーカウンターの天板上で遠く離れた客同士が交流できるソリューション。敢えて情報の解像度を下げることでコミュニケーションに曖昧さを生むことを狙った。</p>
-          <img src="assets/ooze-page.jpg" class="img-fluid" alt="">
-        </div>
-        <div class="row pt-5 pb-5">
-          <div class="row pb-2"><a name="contact">contact</a></div>
-          <a>和田 さつき / Satsuki Wada</a>
-          <a>email: www.satsuki.wada@gmail.com</a>
-        </div>
+            
+            <div class="mb-4">
+              <a href="text.html" class="text-secondary text-decoration-none">home</a>
             </div>
-          </div>
+
+          <h1>ooze</h1>
+          <p>テーマ「これからのエンターテイメント」
+          <br>バーカウンターの天板上で遠く離れた客同士が交流できるソリューション。<br>
+          テクノロジーの発展に伴い、情報の解像度は上がり続けている。
+          しかし、テクノロジーを活用しつつ敢えて情報の解像度を下げることが曖昧なコミュニケーションを楽しむ新たなエンターテイメントになると考えた。
+          </p>
+          <img src="assets/ooze-page.jpg" class="img-fluid" alt="">
+
         </div>
-      </div>
     </div>
   </body>
 </html>
