--- a/portfolio site/petoile.html
+++ b/portfolio site/petoile.html
@@ -7,35 +7,24 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
   <body>
-    <div class="container mt-5">
-      <div class="row">
-          <nav class="navbar navbar-dark bg-white fixed-top">
-            <body style="padding-top: 5rem">
-          <ul class="text-end">
-            <ul class="list-unstyled">
-              <li><a href="text.html" class="text-secondary text-decoration-none">home</a></li>
-            </ul>
-            <a href="text.html#works" class="text-secondary text-decoration-none">works</a>
-            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
-          </ul>
-        </body>
-          </nav>
 
-          <div class="col-lg-10 offset-lg-1">
-          <div class="col-lg-12">
+    <div class="container mt-3 mb-5">
+      
+      <div class="col-lg-10 offset-lg-1">
+
+        <div class="mb-4">
+         <a href="text.html" class="text-secondary text-decoration-none">home</a>
+        </div>
+
+        <h1>NEO CONNECTION</h1>
         <p>テーマ「自然×IoT」<br>仕事の帰り道で星を手に入れ、室内で飼う事ができるプロダクトの提案</p>
+
         <div class="col-lg-12">
           <img src="assets/petoile-page.jpg" class="img-fluid" alt="">
         </div>
-            </div>
-            <div class="row pt-5 pb-5">
-              <div class="row pb-2"><a name="contact">contact</a></div>
-              <a>和田 さつき / Satsuki Wada</a>
-              <a>email: www.satsuki.wada@gmail.com</a>
-            </div>
-          </div>
-        </div>
+
       </div>
     </div>
+
   </body>
 </html>
