--- a/portfolio site/text.html
+++ b/portfolio site/text.html
@@ -8,89 +8,89 @@
   </head>
   <body>
     <div class="container mt-5">
-      <div class="row">
-        <div class="col-lg-10 offset-lg-1">
-          <nav class="navbar navbar-dark bg-white fixed-top">
-            <body style="padding-top: 5rem">
-          <ul class="text-end">
-            <a href="#top" class="text-secondary text-decoration-none">top</a>
-            <a href="#works" class="text-secondary text-decoration-none">works</a>
-            <a href="#contact" class="text-secondary text-decoration-none">contact</a>
-          </ul>
-        </body>
-          </nav>
+        <div class="col-lg-10 offset-lg-1"><!-- レイアウト-->
 
-        <div class="row"><h1 name="top">Satsuki Wada
-        </h1></div>
-        </div>
-        <div class="col-lg-10 offset-lg-1">
-          <div class="row pb-5 pt-2"><a>デザイン・アート・ビジネスといった、括りに拘らない作品作りをしています。</a></div>
-          <div class="row pt-5 pb-5">
+      　  <h1 name="top">Satsuki Wada</h1><!-- 名前 -->
 
-        <div class="row"><a name="works">works</a></div>
-            <div class="row pt-2 pb-1"><a>2017-2020</a></div>
-            <div class="col-lg-4">
-              <a href="neoconnection.html" class="text-dark text-decoration-none">
-                <img src="assets/neoconnection-top.jpg" class="img-fluid" alt="">
-                <div class="mt-1">
-                  <h5 class="mb-0">NEO CONNECTION</h5>
-                  <p style="font-size: 12px">未来のためのコンセプト・デザイン</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4">
-              <a href="owns.html" class="text-dark text-decoration-none">
-                <img src="assets/owns-top.jpg" class="img-fluid" alt="">
-                <div class="mt-1">
-                  <h5 class="mb-0">OWNS</h5>
-                  <p style="font-size: 12px">モノを所有し続けるためのソリューション</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4">
-              <a href="ooze.html" class="text-dark text-decoration-none">
-                <img src="assets/ooze-top.jpg" class="img-fluid" alt="">
-                <div class="mt-1">
-                  <h5 class="mb-0">ooze</h5>
-                  <p style="font-size: 12px">気配で繋がるエンターテイメント</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4">
-              <a href="dandan.html" class="text-dark text-decoration-none">
-                <img src="assets/dandan-top.jpg" class="img-fluid" alt="">
-                <div class="mt-1">
-                  <h5 class="mb-0">だんだん</h5>
-                  <p style="font-size: 12px">在宅介護のためのIoTミラー</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4">
-              <a href="talkn.html" class="text-dark text-decoration-none">
-                <img src="assets/chair-top.jpg" class="img-fluid" alt="">
-                <div class="mt-1">
-                  <h5 class="mb-0">Talkn</h5>
-                  <p style="font-size: 12px">"しるし"の付いた小学校用椅子</p>
-                </div>
-              </a>
-            </div>
-            <div class="col-lg-4">
-              <a href="petoile.html" class="text-dark text-decoration-none">
-                <img src="assets/petoile-top.jpg" class="img-fluid" alt="">
-                <div class="mt-1">
-                  <h5 class="mb-0">petoile</h5>
-                  <p style="font-size: 12px">星を捕まえ、飼育できるプロダクト</p>
-                </div>
-              </a>
-            </div>
+          <div class="row pb-5 pt-2">
+            <a>デザイン・アート・ビジネスといった、括りに拘らない作品作りを目指しています。</a>
+          </div><!-- 自己紹介 -->
+
+        <div class="row pt-5 pb-5"><!-- worksギャラリー -->
+
+         <a name="works">works</a>
+          <div class="row pt-2 pb-2"><a>2017-2020</a></div><!-- 小見出し -->
+
+          <div class="col-lg-4">
+            <a href="neoconnection.html" class="text-dark text-decoration-none">
+              <img src="assets/neoconnection-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">NEO CONNECTION</h5>
+                <p style="font-size: 12px">未来のためのコンセプト・デザイン</p>
+              </div>
+            </a>
           </div>
-          <div class="row pt-5 pb-5">
-            <div class="row pb-2"><a name="contact">contact</a></div>
+
+          <div class="col-lg-4">
+            <a href="owns.html" class="text-dark text-decoration-none">
+              <img src="assets/owns-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">OWNS</h5>
+                <p style="font-size: 12px">モノを所有し続けるためのソリューション</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a href="ooze.html" class="text-dark text-decoration-none">
+              <img src="assets/ooze-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">ooze</h5>
+                <p style="font-size: 12px">気配で繋がるエンターテイメント</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a href="dandan.html" class="text-dark text-decoration-none">
+              <img src="assets/dandan-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">だんだん</h5>
+                <p style="font-size: 12px">在宅介護のためのIoTミラー</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a href="talkn.html" class="text-dark text-decoration-none">
+              <img src="assets/chair-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">Talkn</h5>
+                <p style="font-size: 12px">"しるし"の付いた小学校用椅子</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a href="petoile.html" class="text-dark text-decoration-none">
+              <img src="assets/petoile-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">petoile</h5>
+                <p style="font-size: 12px">星を捕まえ、飼育できるプロダクト</p>
+              </div>
+            </a>
+          </div>
+
+          </div><!-- worksギャラリー -->
+
+          <div class="row pt-5 pb-5"><!-- contact -->
+            <div class="row pb-2"><a>contact</a>
+            </div>
             <a>和田 さつき / Satsuki Wada</a>
             <a>email: www.satsuki.wada@gmail.com</a>
           </div>
+
         </div>
       </div>
-    </div>
   </body>
 </html>
