--- a/portfolio site/neoconnection.html
+++ b/portfolio site/neoconnection.html
@@ -8,7 +8,7 @@
   </head>
   <body>
 
-    <div class="container mt-3 mb-5">
+    <div class="container mt-5 mb-5">
 
         <div class="col-lg-10 offset-lg-1">
 
@@ -16,10 +16,16 @@
             <a href="text.html" class="text-secondary text-decoration-none">home</a>
           </div>
 
-          <h1>NEO CONNECTION</h1>
-          <p>テーマ「これからの人の繋がり方」
-           <br>金沢美術工芸大学卒業制作。「本当の意味で自由な繋がり方を選択できる未来とは？」という考えのもと、コンセプト/ムービーを作成。
-          </p>
+          <div class="mb-4">
+           <p style="font-size: 17px">2020.06-12「これからの人の繋がり方」</p>
+           <h2 class="mb-0">NEO CONNECTION</h2>
+          </div>
+
+          <div class="col-lg-7 mb-5">
+           <p>金沢美術工芸大学卒業制作。「本当の意味で自由な繋がり方を選択できる未来とは？」という考えのもと、コンセプト/ムービーを作成。
+             金沢美術工芸大学卒業制作。「本当の意味で自由な繋がり方を選択できる未来とは？」という考えのもと、コンセプト/ムービーを作成。</p>
+          </div>
+
           <iframe width="1080" height="600" src="https://www.youtube.com/embed/ywDCyvD0myQ" frameborder="0" allowfullscreen></iframe>
           <img width="1080" src="assets/neo-hp.jpg" class="img-fluid" alt="">
 
