バナー挿入

--- a/portfolio site/neoconnection.html
+++ b/portfolio site/neoconnection.html
@@ -16,18 +16,26 @@
             <a href="text.html" class="text-secondary text-decoration-none">home</a>
           </div>
 
-          <div class="mb-4">
-           <p style="font-size: 17px">2020.06-12「これからの人の繋がり方」</p>
-           <h2 class="mb-0">NEO CONNECTION</h2>
-          </div>
+          <p style="font-size: 17px">2020 金沢美術工芸大学卒業制作</p>
 
-          <div class="col-lg-7 mb-5">
-           <p>金沢美術工芸大学卒業制作。「本当の意味で自由な繋がり方を選択できる未来とは？」という考えのもと、コンセプト/ムービーを作成。
-             金沢美術工芸大学卒業制作。「本当の意味で自由な繋がり方を選択できる未来とは？」という考えのもと、コンセプト/ムービーを作成。</p>
+          <img width="1080" src="assets/banner-neo.jpg">
+
+          <h3 class="mb-3 mt-4">NEO CONNECTION</h3>
+
+          <div class="col-lg-11 mb-5 offset-md-1">
+            <p style="line-height: 26px">近い未来、五感を拡張する技術が波及し、移動することなく誰とでもほぼリアルに会える未来が来たら、
+              私たちはどのように人と繋がるのだろうか?
+              現在、SNSを利用した繋がりはもはや義務になりつつある。今後、技術の発展と共にこのプレッシャーはより強化されてしまうだろう。
+              これから先は道具やシステムにおける、人々の「こうあるべき」というプレッシャーを取り除くデザインが重要になると考え、
+              未来のストーリーを作成した。</p>
           </div>
 
           <iframe width="1080" height="600" src="https://www.youtube.com/embed/ywDCyvD0myQ" frameborder="0" allowfullscreen></iframe>
-          <img width="1080" src="assets/neo-hp.jpg" class="img-fluid" alt="">
+
+          <div class="mt-5">
+            <h5>コネクションツールの歴史年表</h5>
+            <img width="1080" src="assets/nenpyo.jpg">
+          </div>
 
         </div>
 
