--- a/portfolio site/neoconnection.html
+++ b/portfolio site/neoconnection.html
@@ -34,6 +34,13 @@
 
           <div class="mt-5">
             <h5>コネクションツールの歴史年表</h5>
+            <div class="col-lg-11 mb-3 offset-md-1">
+              <p style="line-height: 26px">
+                人類のコネクションツールの歴史を辿り、私たちの「繋がりたいという欲求」の変遷を辿る年表を作成。
+                紀元前からあったと言われる鳩時計から始まり、徐々に情報の解像度と速度を上げることに注力してきた。
+                しかし逆に、匿名で繋がるという新たな欲求も誕生した。
+              </p>
+            </div>
             <img width="1080" src="assets/nenpyo.jpg">
           </div>
 
