--- a/dandan.html
+++ b/dandan.html
@@ -12,7 +12,7 @@
       <div class="col-lg-10 offset-lg-1">
 
         <div class="mb-4">
-         <a href="text.html" class="text-secondary text-decoration-none">home</a>
+         <a href="index.html" class="text-secondary text-decoration-none">home</a>
         </div>
 
         <p style="font-size: 17px">2019.10-11　三菱電機との産学連携プロジェクト</p>
