--- a/ooze.html
+++ b/ooze.html
@@ -12,7 +12,7 @@
           <div class="col-lg-10 offset-lg-1">
             
             <div class="mb-4">
-              <a href="text.html" class="text-secondary text-decoration-none">home</a>
+              <a href="index.html" class="text-secondary text-decoration-none">home</a>
             </div>
 
           <h1>ooze</h1>
