--- a/owns.html
+++ b/owns.html
@@ -12,7 +12,7 @@
       <div class="col-lg-10 offset-lg-1">
 
             <div class="mb-4">
-              <a href="text.html" class="text-secondary text-decoration-none">home</a>
+              <a href="index.html" class="text-secondary text-decoration-none">home</a>
             </div>
 
           　<p style="font-size: 17px">2020.05-06</p>
