--- a/neoconnection.html
+++ b/neoconnection.html
@@ -13,7 +13,7 @@
         <div class="col-lg-10 offset-lg-1">
 
           <div class="mb-4">
-            <a href="index.html" class="text-secondary text-decoration-none">home</a>
+            <a href="/" class="text-secondary text-decoration-none">home</a>
           </div>
 
           <p style="font-size: 17px">2020 金沢美術工芸大学卒業制作</p>
