--- a/talkn.html
+++ b/talkn.html
@@ -11,7 +11,7 @@
       <div class="col-lg-10 offset-lg-1">
 
         <div class="mb-4">
-          <a href="index.html" class="text-secondary text-decoration-none">home</a>
+          <a href="/" class="text-secondary text-decoration-none">home</a>
         </div>
 
         <p style="font-size: 17px">2019.6-8</p>
