--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
 <html><!-- ここからHTMLが始まりますというタグ -->
+  <link rel="icon" type="image/png" href="assets/Icon.png">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
