--- a/petoile.html
+++ b/petoile.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
   </head>
+  
+ 　　<link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/Icon.png">
+  
   <body>
 
     <div class="container mt-3 mb-5">
