--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
-<!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
-<html><!-- ここからHTMLが始まりますというタグ -->
+<!DOCTYPE html>
+<html>
   <head>
-    <meta charset="utf-8">
     <title>Satsuki Wada Works</title>
+    <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
