--- a/ooze.html
+++ b/ooze.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
 <html><!-- ここからHTMLが始まりますというタグ -->
   <head>
+    <title>ooze</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
