--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  <head prefix="http://wsatsuki.com/">
     <title>Satsuki Wada Works</title>
+    <meta property="assets/OGP.png" content="http://wsatsuki.com/" />
+    <meta property="og:type" content="website" />
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
