--- a/ooze.html
+++ b/ooze.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
-<html><!-- ここからHTMLが始まりますというタグ -->
+<html>
   <head>
     <title>ooze</title>
     <meta charset="utf-8">
