--- a/talkn.html
+++ b/talkn.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
+<!DOCTYPE html>
 <html><!-- ここからHTMLが始まりますというタグ -->
   <head>
     <title>talken</title>
