--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head prefix="http://wsatsuki.com/">
+  <head lang="ja" prefix="og: http://ogp.me/ns#">
     <title>Satsuki Wada Works</title>
     <meta property="assets/OGP.png" content="http://wsatsuki.com/" />
     <meta property="og:type" content="website" />
