--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
   <head lang="ja" prefix="og: http://ogp.me/ns#">
     <title>Satsuki Wada Works</title>
-    <meta property="assets/OGP.png" content="http://wsatsuki.com/" />
-    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Satsuki Wada Works">
+    <meta property="og:type" content="website">
+    <meta property="og:description" content="デザイン・アート・ビジネスといった、括りに拘らない作品作りを目指しています。">
+    <meta property="og:image" content="assets/OGP.png">
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
