--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head lang="ja" prefix="og: http://ogp.me/ns#">
     <title>Satsuki Wada Works</title>
+    <meta property="og:url" content="http://wsatsuki.com/" />
     <meta property="og:title" content="Satsuki Wada Works">
     <meta property="og:type" content="website">
     <meta property="og:description" content="デザイン・アート・ビジネスといった、括りに拘らない作品作りを目指しています。">
