--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta property="og:title" content="Satsuki Wada Works">
     <meta property="og:type" content="website">
     <meta property="og:description" content="デザイン・アート・ビジネスといった、括りに拘らない作品作りを目指しています。">
-    <meta property="og:image" content="assets/OGP.png">
+    <meta property="og:image" content="assets/ogp.png">
     <meta property=”fb:app_id” content=”960555008165962”>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
