--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head lang="ja" prefix="og: http://ogp.me/ns#">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NNTN7K82T8');
+</script>
     <title>Satsuki Wada Works</title>
     <meta property="og:url" content="http://wsatsuki.com/" />
     <meta property="og:title" content="Satsuki Wada Works">
