--- a/talkn.html
+++ b/talkn.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html><!-- ここからHTMLが始まりますというタグ -->
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NNTN7K82T8');
+</script>
     <title>talken</title>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
