--- a/neoconnection.html
+++ b/neoconnection.html
@@ -34,7 +34,7 @@
 
           <h2 class="mb-3">NEO CONNECTION</h2>
 
-          <img width="1080" src="assets/banner-neo.jpg">
+          <img src="assets/banner-neo.jpg" class="img-fluid" alt="">
 
           <div class="mt-5">
             <h5>これからの人の繋がり方</h5>
@@ -48,7 +48,7 @@
               未来のストーリーを作成した。</p>
           </div>
 
-          <iframe width="1080" height="600" src="https://www.youtube.com/embed/ywDCyvD0myQ" frameborder="0" allowfullscreen></iframe>
+          <iframe width="640" height="360" src="https://www.youtube.com/embed/ywDCyvD0myQ" frameborder="0" allowfullscreen></iframe>
 
           <div class="mt-5">
             <h5>コネクションツールの歴史年表</h5>
