--- a/neoconnection.html
+++ b/neoconnection.html
@@ -48,7 +48,26 @@
               未来のストーリーを作成した。</p>
           </div>
 
-          <iframe width="640" height="360" src="https://www.youtube.com/embed/ywDCyvD0myQ" frameborder="0" allowfullscreen></iframe>
+          <div class="movie-wrap">
+            <iframe width="640" height="360"
+            src="https://www.youtube.com/embed/ywDCyvD0myQ" allowfullscreen>
+            </iframe>
+          </div>
+          <style>
+            .movie-wrap {
+              position: relative;
+              padding-bottom: 56.25%; /*アスペクト比 16:9の場合の縦幅*/
+              height: 0;
+              overflow: hidden;
+            }
+            .movie-wrap iframe {
+              position: absolute;
+              top: 0;
+              left: 0;
+              width: 100%;
+              height: 100%;
+            }
+          </style>
 
           <div class="mt-5">
             <h5>コネクションツールの歴史年表</h5>
@@ -58,7 +77,7 @@
                 紀元前からあったと言われる鳩時計から始まり、インターネット波及後まで、そしてそれらから傾向を分析し、作成したムービーの設定も含む年表となっている。
               </p>
             </div>
-            <img width="1080" src="assets/nenpyo.jpg">
+            <img src="assets/nenpyo.jpg" class="img-fluid" alt="">
           </div>
 
          
