--- a/index.html
+++ b/index.html
@@ -14,13 +14,21 @@
     <meta property="og:url" content="http://wsatsuki.com/" />
     <meta property="og:title" content="Satsuki Wada Works">
     <meta property="og:type" content="website">
-    <meta property="og:description" content="デザイン・アート・ビジネスといった、括りに拘らない作品作りを目指しています。">
+    <meta property="og:description" content="Designer / Consultant / Illustrator etc...">
     <meta property="og:image" content="assets/ogp.png">
     <meta property=”fb:app_id” content=”960555008165962”>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&display=swap" rel="stylesheet">
+    <style>
+     body {
+       font-family: "Noto Sans JP";
+     } 
+    </style>
   </head>
   
   <link rel="icon" href="favicon.ico">
@@ -33,7 +41,7 @@
       　  <h1 name="top">Satsuki Wada</h1><!-- 名前 -->
 
           <div class="row pb-5 pt-2">
-            <a>デザイン・アート・ビジネスといった、括りに拘らない作品作りを目指しています。</a>
+            <a>Designer / Consultant / Illustrator etc...</a>
           </div><!-- 自己紹介 -->
 
         <div class="row pt-5 pb-5"><!-- worksギャラリー -->
