--- a/neoconnection.html
+++ b/neoconnection.html
@@ -7,7 +7,8 @@ new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
 j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-T96WLVWC');</script>
-<!-- End Google Tag Manager -->    <title>NEO CONNECTION</title>
+<!-- End Google Tag Manager -->
+    <title>NEO CONNECTION</title>
     <meta property="og:url" content="http://wsatsuki.com/" />
     <meta property="og:title" content="Satsuki Wada Works">
     <meta property="og:type" content="website">
