--- a/neoconnection.html
+++ b/neoconnection.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html><!-- このファイルはHTMLですという宣言 -->
 <html><!-- ここからHTMLが始まりますというタグ -->
   <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-NNTN7K82T8');
+</script>
 <!-- Google Tag Manager -->
 <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
 new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
