--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
         <div class="row pt-5 pb-5"><!-- worksギャラリー -->
 
          <a name="works">works</a>
-          <div class="row pt-2 pb-2"><a>2017-2020</a></div><!-- 小見出し -->
+          <div class="row pt-2 pb-2"></div><!-- 小見出し -->
 
           <div class="col-lg-4">
             <a href="neoconnection.html" class="text-dark text-decoration-none">
