--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
               <img src="assets/face.jpg" width="90px">
              <div>
               <a>和田 さつき / Satsuki Wada</a>
-              <br><a>email: www.satsuki.wada@gmail.com</a>
+              <br><p>email: </p><a href="mailto:www.satsuki.wada@gmail.com">www.satsuki.wada@gmail.com</a>
              </div>
             </div>
           </div>
