--- a/index.html
+++ b/index.html
@@ -67,6 +67,26 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="row pt-2 pb-2"></div><!-- 小見出し -->
 
           <div class="col-lg-4">
+            <a href="comp.html" class="text-dark text-decoration-none">
+              <img src="ssets/comp/comp01.png" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">劣等感のすゝめ（Zine）</h5>
+                <p style="font-size: 12px">劣等感の魅力、能力主義社会が生み出す歪みについて語った文章群。</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a href="utsuwa.html" class="text-dark text-decoration-none">
+              <img src="assets/utsuwa/utsuwa01.png" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">器 utsuwa</h5>
+                <p style="font-size: 12px">器のコレクション・紹介</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
             <a href="neoconnection.html" class="text-dark text-decoration-none">
               <img src="assets/neoconnection-top.jpg" class="img-fluid" alt="">
               <div class="mt-1">
