--- a/movie.html
+++ b/movie.html
@@ -125,11 +125,8 @@ header {
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <header class="fixed-top shadow-sm">
-  <nav class="container d-flex justify-content-between align-items-center py-2">
-    <div class="mb-0">  <!-- mb-0でマージンをリセット -->
-      <a href="index.html" class="text-secondary text-decoration-none">home</a>
-    </div>
-    <div class="social-icons d-flex">
+  <nav class="container d-flex justify-content-end align-items-center py-2">
+    <div class="social-icons">
       <a href="https://x.com/say____u" target="_blank" class="me-2">
         <img src="assets/sns_icon/x.png" alt="Twitter" width="24">
       </a>
@@ -143,20 +140,58 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </nav>
 </header>
 
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5">
+      <div class="col-lg-10 offset-lg-1">
+        <div>
+          <h1 name="top">Satsuki Wada</h1><!-- 名前 -->
 
-        <div class="col-lg-10 offset-lg-1">
-
-          <p style="font-size: 17px;margin-top: 80px;">2019.04-06</p>
-          <h2 class="mb-3">ooze</h2>
-          <p>テーマ「これからのエンターテイメント」
-          <br>バーカウンターの天板上で遠く離れた客同士が交流できるソリューション。<br>
-          テクノロジーの発展に伴い、情報の解像度は上がり続けている。
-          しかし、テクノロジーを活用しつつ敢えて情報の解像度を下げることが曖昧なコミュニケーションを楽しむ新たなエンターテイメントになると考えた。
-          </p>
-          <img src="assets/ooze/ooze-page.jpg" class="img-fluid" alt="">
+          <div class="row pb-5 pt-2">
+            <p>Designer / Scenario writer / Consultant / Illustrator etc...</p>
+          </div><!-- 自己紹介 -->
 
         </div>
-    </div>
+        <div class="row pt-5 pb-5">
+          <div class="sort-btn mb-4">
+            <div class="d-flex flex-wrap mb-1 px-1 f-14">
+              <div class="flex-grow-0"><a class="btn btn--white" href="index.html"> #All</a></div>  
+              <div class="flex-grow-0"><a class="btn btn--white" href="product.html"> #Product</a></div>
+              <div class="flex-grow-0"><a class="btn btn--white" href="zine.html"> #Zine</a></div>
+              <div class="flex-grow-0"><a class="btn btn--black" href="movie.html"> #Movie & Scenario</a></div>
+              <div class="flex-grow-0"><a class="btn btn--white" href="illustration.html"> #Illustration</a></div>
+             
+            </div>
+          </div>
+  
+          <a name="works">Design</a>
+          <div class="row pt-2 pb-2"></div><!-- 小見出し -->
+          <div class="col-lg-4">
+            <a href="neoconnection.html" class="text-dark text-decoration-none">
+              <img src="assets/neo/neoconnection-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">NEO CONNECTION</h5>
+                <p style="font-size: 12px">誰もが自分らしい「繋がり方」を選択できる未来のためのコンセプト・デザイン</p>
+              </div>
+            </a>
+          </div>
+        </div>
+
+        <div class="row pt-5 pb-5">
+          <p>Scenario</p>
+          <details>
+            <summary>2019年　近江演劇祭「はじまりの夜」　-脚本</summary>
+            <p>卒業式の夜。ほとんどの人が帰宅する中、ある高校の女子寮では3人の生徒が残っていた。思い出話に花を咲かせる彼女たちは、これからの未来に想いを馳せながら、一つ一つ荷物を纏めていく。この夜はさよならと、そして何かがはじまる夜になる。</p>
+            <p>誰もが華々しい思い出を持って、未来に期待を持って卒業するわけじゃない。キラキラした友人への劣等感と、素直になれない自分が許せないという気持ちと、愛情を込めた脚本。</p>
+          </details>
+
+            <details>
+            　<summary>2015年/2016年　「探しものはなんですか」/「探しものはなんですか　リフレッシュ！」　-脚本・演出・出演</summary>
+              <p>新しくファミレスのバイトを始めた主人公、山川。そのファミレスは役者や歌手、芸人など様々な分野の「卵」が働く場だった。輝かしい夢に向かって努力している人々と「何もない自分」との対照に苦しむ山川だったが…。</p>
+              <p>夢や希望がある人間が素晴らしいのか？何も見つけられなくてもいいじゃないか。そんな気持ちで書いた脚本。2016年版はキャラクターの設定を大きく変えリメイク。</p>             
+            </details>
+        </div>
+
+
+        </div>
+      </div>
   </body>
 </html>
