--- a/product.html
+++ b/product.html
@@ -125,11 +125,8 @@ header {
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <header class="fixed-top shadow-sm">
-  <nav class="container d-flex justify-content-between align-items-center py-2">
-    <div class="mb-0">  <!-- mb-0でマージンをリセット -->
-      <a href="index.html" class="text-secondary text-decoration-none">home</a>
-    </div>
-    <div class="social-icons d-flex">
+  <nav class="container d-flex justify-content-end align-items-center py-2">
+    <div class="social-icons">
       <a href="https://x.com/say____u" target="_blank" class="me-2">
         <img src="assets/sns_icon/x.png" alt="Twitter" width="24">
       </a>
@@ -143,20 +140,91 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
   </nav>
 </header>
 
-    <div class="container mt-5 mb-5">
+    <div class="container mt-5">
+      <div class="col-lg-10 offset-lg-1">
+        <div>
+          <h1 name="top">Satsuki Wada</h1><!-- 名前 -->
 
-        <div class="col-lg-10 offset-lg-1">
-
-          <p style="font-size: 17px;margin-top: 80px;">2019.04-06</p>
-          <h2 class="mb-3">ooze</h2>
-          <p>テーマ「これからのエンターテイメント」
-          <br>バーカウンターの天板上で遠く離れた客同士が交流できるソリューション。<br>
-          テクノロジーの発展に伴い、情報の解像度は上がり続けている。
-          しかし、テクノロジーを活用しつつ敢えて情報の解像度を下げることが曖昧なコミュニケーションを楽しむ新たなエンターテイメントになると考えた。
-          </p>
-          <img src="assets/ooze/ooze-page.jpg" class="img-fluid" alt="">
+          <div class="row pb-5 pt-2">
+            <p>Designer / Scenario writer / Consultant / Illustrator etc...</p>
+          </div><!-- 自己紹介 -->
 
         </div>
-    </div>
+        <div class="row pt-5 pb-5">
+          <div class="sort-btn mb-4">
+            <div class="d-flex flex-wrap mb-1 px-1 f-14">
+              <div class="flex-grow-0"><a class="btn btn--white" href="index.html"> #All</a></div>  
+                <div class="flex-grow-0"><a class="btn btn--black" href="product.html"> #Product</a></div>
+                <div class="flex-grow-0"><a class="btn btn--white" href="zine.html"> #Zine</a></div>
+                <div class="flex-grow-0"><a class="btn btn--white" href="movie.html"> #Movie & Scenario</a></div>
+                <div class="flex-grow-0"><a class="btn btn--white" href="illustration.html"> #Illustration</a></div>
+               
+              </div>
+
+          </div>
+  
+          <a name="works">Design</a>
+          <div class="row pt-2 pb-2"></div><!-- 小見出し -->
+          <div class="col-lg-4">
+            <a href="owns.html" class="text-dark text-decoration-none">
+              <img src="assets/owns/owns-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">OWNS</h5>
+                <p style="font-size: 12px">大量生産/大量消費に対するアンチテーゼ。モノを所有し続けるためのソリューション</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a href="ooze.html" class="text-dark text-decoration-none">
+              <img src="assets/ooze/ooze-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">ooze</h5>
+                <p style="font-size: 12px">敢えて解像度を下げて他人を感じることの心地よさを追求した、気配で繋がるエンターテイメント</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="okan.html" class="text-dark text-decoration-none">
+              <img src="assets/okan/okan-main.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">Okan</h5>
+                <p style="font-size: 12px">めんどくさいコミュニケーションを楽しめる、“おかん”のように世話を焼いてくるちょっと鬱陶しいロボットの提案</p>
+              </div>
+            </a>
+          </div>
+         
+          <div class="col-lg-4">
+            <a href="talkn.html" class="text-dark text-decoration-none">
+              <img src="assets/chair/chair-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">Talkn</h5>
+                <p style="font-size: 12px">"しるし"の付いた小学校用椅子</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
+            <a href="petoile.html" class="text-dark text-decoration-none">
+              <img src="assets/pet/petoile-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">petoile</h5>
+                <p style="font-size: 12px">星を捕まえ、飼育できるプロダクト</p>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4">
+            <a href="dandan.html" class="text-dark text-decoration-none">
+              <img src="assets/dandan/dandan-top.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">だんだん </h5>
+                <p style="font-size: 12px">在宅介護のためのIoTミラー</p>
+              </div>
+            </a>
+          </div>
+
+        </div>
+        </div>
+      </div>
   </body>
 </html>
