--- a/movie.html
+++ b/movie.html
@@ -22,8 +22,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   </head>
+  
   
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="assets/Icon.png">
@@ -34,11 +35,8 @@
 height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
 <!-- End Google Tag Manager (noscript) -->
 <header class="fixed-top shadow-sm">
-  <nav class="container d-flex justify-content-between align-items-center py-2">
-    <div class="mb-0">  <!-- mb-0でマージンをリセット -->
-      <a href="index.html" class="text-secondary text-decoration-none">home</a>
-    </div>
-    <div class="social-icons d-flex">
+  <nav class="container d-flex justify-content-end align-items-center py-2">
+    <div class="social-icons">
       <a href="https://x.com/say____u" target="_blank" class="me-2">
         <img src="assets/sns_icon/x.png" alt="Twitter" width="24">
       </a>
