--- a/product.html
+++ b/product.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
   <head lang="ja" prefix="og: http://ogp.me/ns#">
-   <!-- Google tag (gtag.js) -->
-   <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
-   <script>
-     window.dataLayer = window.dataLayer || [];
-     function gtag(){dataLayer.push(arguments);}
-     gtag('js', new Date());
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-NNTN7K82T8"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
 
-     gtag('config', 'G-NNTN7K82T8');
-   </script>
- <!-- Google Tag Manager -->
+      gtag('config', 'G-NNTN7K82T8');
+    </script>
+  <!-- Google Tag Manager -->
   
     <title>Satsuki Wada Works</title>
     <meta property="og:url" content="http://wsatsuki.com/" />
@@ -22,8 +22,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="style.css">
   </head>
+  
+  
+  <link rel="icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/Icon.png">
+  
+  <body>
+    <!-- Google Tag Manager (noscript) -->
+<noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-T96WLVWC"
+height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+<!-- End Google Tag Manager (noscript) -->
+<header class="fixed-top shadow-sm">
+  <nav class="container d-flex justify-content-end align-items-center py-2">
+    <div class="social-icons">
+      <a href="https://x.com/say____u" target="_blank" class="me-2">
+        <img src="assets/sns_icon/x.png" alt="Twitter" width="24">
+      </a>
+      <a href="https://www.instagram.com/us_yu3/" target="_blank" class="me-2">
+        <img src="assets/sns_icon/instagram.png" alt="Instagram" width="24">
+      </a>
+      <a href="mailto:www.satsuki.wada@gmail.com" target="_blank">
+        <img src="assets/sns_icon/mail.png" alt="mail" width="24">
+      </a>
+    </div>
+  </nav>
+</header>
   
   <link rel="icon" href="favicon.ico">
   <link rel="icon" type="image/png" href="assets/Icon.png">
