--- a/index.html
+++ b/index.html
@@ -81,6 +81,16 @@ height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
           <div class="row pt-2 pb-2"></div><!-- 小見出し -->
 
           <div class="col-lg-4">
+            <a href="gei_dash.html" class="text-dark text-decoration-none">
+              <img src="assets/gei_dash/gei_thum.jpg" class="img-fluid" alt="">
+              <div class="mt-1">
+                <h5 class="mb-0">藝’（ゲイダッシュ）プロジェクト</h5>
+                <p style="font-size: 12px">日常に潜む、「藝術」とは言わない謙虚さを持った物や空間を、「藝'(ゲイダッシュ)」と名付けて集めるプロジェクト。</p>
+              </div>
+            </a>
+          </div>
+
+          <div class="col-lg-4">
             <a href="comp.html" class="text-dark text-decoration-none">
               <img src="assets/comp/comp_thum.png" class="img-fluid" alt="">
               <div class="mt-1">
